syntax = "proto3";

import "Type.proto";

package Protobuf.Client;

// id: 0
message Connection {
    string SessionId = 1;
}

// id: 1
message LoginResponse {
    bool Success = 1;
    optional string UserUUID = 2;
    optional string Username = 3;
    optional string Token = 4;
}

// id: 2
message CreateEntity {
    Entity Entity = 1;
}

// id: 3
message MoveEntity {
    string EntityId = 1;
    Vector2 Position = 2;
    Quaternion Rotation = 3;
}

// id: 4
message RemoveEntity {
    string EntityId = 1;
}